- Added edit function on listing

--- a/static/staticfiles/css/adjustments.css
+++ b/static/staticfiles/css/adjustments.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
+
+body {
+    font-family: 'Inter', sans-serif;
+}
+
+label {
+    font-weight: bold !important;
+}
+
 .cover {
     object-fit: cover !important;
 }
