--- a/static/staticfiles/css/style.bundle.css
+++ b/static/staticfiles/css/style.bundle.css
@@ -57162,8 +57162,8 @@ body.swal2-height-auto {
     border-color: rgba(27, 197, 189, 0.3); }
 
 .swal2-icon.swal2-info {
-  border-color: #8950FC;
-  color: #8950FC; }
+  border-color: #e73c1b;
+  color: #e73c1b; }
 
 .swal2-icon.swal2-question {
   border-color: #e73c1b;
