--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -6,19 +6,12 @@
         <title>Tulum Real State | Login</title>
         <meta name="description" content="Login page example" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <!--begin::Fonts-->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
-        <!--end::Fonts-->
-        <!--begin::Page Custom Styles(used by this page)-->
         <link href="{% static 'css/pages/login/classic/login-2.css' %}" rel="stylesheet" type="text/css" />
-        <!--end::Page Custom Styles-->
-        <!--begin::Global Theme Styles(used by all pages)-->
         <link href="{% static 'plugins/global/plugins.bundle.css' %}" rel="stylesheet" type="text/css" />
         <link href="{% static 'plugins/custom/prismjs/prismjs.bundle.css' %}" rel="stylesheet" type="text/css" />
         <link href="{% static 'css/style.bundle.css' %}" rel="stylesheet" type="text/css" />
-        <!--end::Global Theme Styles-->
-        <!--begin::Layout Themes(used by all pages)-->
-        <!--end::Layout Themes-->
+        <link href="{% static 'css/adjustments.css' %}" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" href="{% static 'img/tulum-ico.ico' %}" />
     </head>
     <!--end::Head-->
